Remove brand name bc of scaling issues on mobile

--- a/client/src/components/header/header.styles.scss
+++ b/client/src/components/header/header.styles.scss
@@ -43,9 +43,3 @@
     }
   }
 }
-
-.brand {
-  position: absolute;
-  left: 125px;
-  top: 45px;
-}
